<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_start"
            android:icon="@drawable/ic_nav_action_home"
            android:title="@string/nav_drawer_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_nav_action_trips"
            android:title="@string/nav_drawer_all_trips" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_nav_action_gallery"
            android:title="@string/nav_drawer_gallery" />
    </group>

    <item android:title="@string/nav_drawer_category_other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_nav_action_settings"
                android:title="@string/nav_drawer_settings" />
        </menu>
    </item>

</menu>
